--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.9"
 
 services:
   api:
-    build: .
+    build:
+      context: ../..
+      dockerfile: Dockerfile
     container_name: qip_api_staging
     ports:
       - "8011:80"
