--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   pytest:
     image: qip_api_staging_api
     working_dir: /app
-    command: sh -c "pip install -r requirements.txt && pytest"
+    command: sh -c "pip install -r requirements.txt && pytest --ds=qip.settings -v"
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DB_HOST: ${DB_HOST}
