--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     working_dir: /app
     command: sh -c "pip install -r requirements.txt && pytest --ds=qip.settings -v"
     environment:
+      DEBUG: "false"
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
