--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -10,11 +10,13 @@ services:
       - "8011:80"
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+      SIGNING_SECRET: ${SIGNING_SECRET}
       DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
+      
     networks:
       - qip_backend_net
       - woodpecker_default
