--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     environment:
       DEBUG: "false"
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+      SIGNING_SECRET: ${SIGNING_SECRET}
       DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
       DB_USER: ${DB_USER}
