--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -16,7 +16,9 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
-      
+      GOOGLE_APPLICATION_CREDENTIALS: /app/config/credentials.json
+    volumes:
+      - /tmp/gcp-credentials.json:/app/config/credentials.json:ro
     networks:
       - qip_backend_net
       - woodpecker_default
@@ -35,6 +37,9 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
+      GOOGLE_APPLICATION_CREDENTIALS: /app/config/credentials.json
+    volumes:
+      - /tmp/gcp-credentials.json:/app/config/credentials.json:ro
     depends_on:
       - api
     networks:
