--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
+      GS_BUCKET_NAME: ${GS_BUCKET_NAME}
+      GS_PROJECT_ID: ${GS_PROJECT_ID}
       GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
     volumes:
       - /tmp/gcp-credentials.json:/tmp/gcp-credentials.json:ro
@@ -37,6 +39,8 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
+      GS_BUCKET_NAME: ${GS_BUCKET_NAME}
+      GS_PROJECT_ID: ${GS_PROJECT_ID}
       GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
     volumes:
       - /tmp/gcp-credentials.json:/tmp/gcp-credentials.json:ro
