--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -8,6 +8,12 @@ services:
     container_name: qip_api_staging
     ports:
       - "8011:80"
+    command: >
+      sh -c "
+        echo \"${GOOGLE_CREDENTIALS_JSON}\" > /tmp/gcp-credentials.json &&
+        python manage.py migrate &&
+        gunicorn qip.wsgi:application --bind 0.0.0.0:80
+      "
     environment:
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
       SIGNING_SECRET: ${SIGNING_SECRET}
@@ -19,8 +25,6 @@ services:
       GS_BUCKET_NAME: ${GS_BUCKET_NAME}
       GS_PROJECT_ID: ${GS_PROJECT_ID}
       GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
-    volumes:
-      - /tmp/gcp-credentials.json:/tmp/gcp-credentials.json:ro
     networks:
       - qip_backend_net
       - woodpecker_default
@@ -29,7 +33,12 @@ services:
   pytest:
     image: qip_api_staging_api
     working_dir: /app
-    command: sh -c "pip install -r requirements.txt && pytest --ds=qip.settings -v"
+    command: >
+      sh -c "
+        echo \"${GOOGLE_CREDENTIALS_JSON}\" > /tmp/gcp-credentials.json &&
+        pip install -r requirements.txt &&
+        pytest --ds=qip.settings -v
+      "
     environment:
       DEBUG: "false"
       DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
@@ -42,8 +51,6 @@ services:
       GS_BUCKET_NAME: ${GS_BUCKET_NAME}
       GS_PROJECT_ID: ${GS_PROJECT_ID}
       GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
-    volumes:
-      - /tmp/gcp-credentials.json:/tmp/gcp-credentials.json:ro
     depends_on:
       - api
     networks:
