adaptation de woodpecker.yml

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -19,17 +19,16 @@ steps:
 
   prepare-secrets:
     image: alpine
-    volumes:
-      - /tmp:/tmp
     commands:
+      - rm -rf /tmp/gcp-credentials.json
       - echo "$GOOGLE_CREDENTIALS_JSON" > /tmp/gcp-credentials.json
-      - cat /tmp/gcp-credentials.json # debug
     environment:
       GOOGLE_CREDENTIALS_JSON:
         from_secret: GOOGLE_CREDENTIALS_JSON
     when:
       branch: [staging, prod]
       event: [push, manual]
+
 
 
   deploy-staging:
