--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -19,21 +19,16 @@ steps:
 
   prepare-secrets:
     image: alpine
+    volumes:
+      - secrets:/secrets
     commands:
-      - mkdir -p /secrets
       - echo "$GOOGLE_CREDENTIALS_JSON" > /secrets/credentials.json
     environment:
       GOOGLE_CREDENTIALS_JSON:
         from_secret: GOOGLE_CREDENTIALS_JSON
-    volumes:
-      - /secrets:/secrets
     when:
       branch: [staging, prod]
       event: [push, manual]
-
-
-
-
 
   deploy-staging:
     image: docker/compose:1.29.2
@@ -41,7 +36,7 @@ steps:
     depends_on: [build, prepare-secrets]
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /tmp/gcp-credentials.json:/tmp/gcp-credentials.json
+      - secrets:/secrets
     environment:
       DJANGO_SECRET_KEY:
         from_secret: DJANGO_SECRET_KEY
@@ -61,7 +56,7 @@ steps:
         from_secret: GS_BUCKET_NAME
       GS_PROJECT_ID:
         from_secret: GS_PROJECT_ID
-      GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
+      GOOGLE_APPLICATION_CREDENTIALS: /secrets/credentials.json
     commands:
       - docker-compose -f docker/staging/docker-compose.yml -p qip_api_staging down --remove-orphans || true
       - docker rm -f qip_api_staging || true
@@ -77,7 +72,7 @@ steps:
     depends_on: [build, prepare-secrets]
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /tmp/gcp-credentials.json:/tmp/gcp-credentials.json
+      - secrets:/secrets
     environment:
       DJANGO_SECRET_KEY:
         from_secret: DJANGO_SECRET_KEY
@@ -97,7 +92,7 @@ steps:
         from_secret: GS_BUCKET_NAME
       GS_PROJECT_ID:
         from_secret: GS_PROJECT_ID
-      GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-credentials.json
+      GOOGLE_APPLICATION_CREDENTIALS: /secrets/credentials.json
     commands:
       - docker-compose -f docker/prod/docker-compose.yml -p qip_api_prod down --remove-orphans || true
       - docker rm -f qip_api_prod || true
@@ -105,3 +100,6 @@ steps:
     when:
       branch: [prod]
       event: [push, manual]
+
+volumes:
+  - name: secrets
