Que la luz de Solomon Hykes bendiga mi deploy

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -33,10 +33,10 @@ steps:
   deploy-staging:
     image: docker/compose:1.29.2
     privileged: true
-    depends_on: [build, prepare-secrets]
+    depends_on: [build]
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - secrets:/secrets
+      - ./secrets:/secrets
     environment:
       DJANGO_SECRET_KEY:
         from_secret: DJANGO_SECRET_KEY
@@ -58,10 +58,15 @@ steps:
         from_secret: GS_PROJECT_ID
       GOOGLE_APPLICATION_CREDENTIALS: /secrets/credentials.json
     commands:
+      - mkdir -p ./secrets
+      - echo "$GOOGLE_CREDENTIALS_JSON" > ./secrets/credentials.json
+      - cat ./secrets/credentials.json  # 👈 sanity check
       - docker-compose -f docker/staging/docker-compose.yml -p qip_api_staging down --remove-orphans || true
       - docker rm -f qip_api_staging || true
       - docker-compose -f docker/staging/docker-compose.yml -p qip_api_staging up -d --build --remove-orphans
       - docker-compose -f docker/staging/docker-compose.yml -p qip_api_staging run --rm pytest
+    secrets:
+      - GOOGLE_CREDENTIALS_JSON
     when:
       branch: [staging]
       event: [push, manual]
