--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -10,7 +10,6 @@ services:
       - "8011:80"
     command: >
       sh -c "
-        echo \"$GOOGLE_CREDENTIALS_JSON\" > /secrets/credentials.json &&
         python manage.py migrate &&
         gunicorn qip.wsgi:application --bind 0.0.0.0:80
       "
@@ -24,10 +23,7 @@ services:
       DB_NAME: ${DB_NAME}
       GS_BUCKET_NAME: ${GS_BUCKET_NAME}
       GS_PROJECT_ID: ${GS_PROJECT_ID}
-      GOOGLE_CREDENTIALS_JSON: ${GOOGLE_CREDENTIALS_JSON}
-      GOOGLE_APPLICATION_CREDENTIALS: /secrets/credentials.json
-    volumes:
-      - ./secrets:/secrets:ro
+      GOOGLE_CREDENTIALS_B64: ${GOOGLE_CREDENTIALS_B64}
     networks:
       - qip_backend_net
       - woodpecker_default
@@ -38,7 +34,6 @@ services:
     working_dir: /app
     command: >
       sh -c "
-        echo \"$GOOGLE_CREDENTIALS_JSON\" > /secrets/credentials.json &&
         pip install -r requirements.txt &&
         pytest --ds=qip.settings -v
       "
@@ -53,18 +48,12 @@ services:
       DB_NAME: ${DB_NAME}
       GS_BUCKET_NAME: ${GS_BUCKET_NAME}
       GS_PROJECT_ID: ${GS_PROJECT_ID}
-      GOOGLE_CREDENTIALS_JSON: ${GOOGLE_CREDENTIALS_JSON}
-      GOOGLE_APPLICATION_CREDENTIALS: /secrets/credentials.json
-    volumes:
-      - ./secrets:/secrets:ro
+      GOOGLE_CREDENTIALS_B64: ${GOOGLE_CREDENTIALS_B64}
     depends_on:
       - api
     networks:
       - qip_backend_net
       - woodpecker_default
-
-volumes:
-  secrets:
 
 networks:
   qip_backend_net:
